--- a/assets/sass/helpers/_variables.scss
+++ b/assets/sass/helpers/_variables.scss
@@ -4,6 +4,7 @@
 $black:     #444;
 $blue:      #3769b9;
 $charcoal:  #2e2e2e;
+$charcoal-dark:  #1e1e1e;
 $light-gray: #eaeaea;
 $white:     #fff;
 
